--- a/quotation.html
+++ b/quotation.html
@@ -71,10 +71,7 @@
           <label for="J_BaobeiName">宝贝名称：</label>
           <input type="text" size="50" class="input-text" value="" maxlength="30">
           <button class="J_MakePoint button search-btn" type="submit">搜索</button>
-          <span id="J_SearchBoxToggle">
-          	<a href="#" class="J_MakePoint more-filter" >更多筛选条件</a>
-            <a href="#" class="J_MakePoint less-filter">精简筛选条件</a>
-          </span>
+          <span id="J_SearchBoxToggle"> <a href="#" class="J_MakePoint more-filter" >更多筛选条件</a> <a href="#" class="J_MakePoint less-filter">精简筛选条件</a> </span>
           <ul id="J_MoreControl" class="search-filter">
             <li class="col1">
               <label>报价日期:</label>
@@ -86,10 +83,105 @@
             </li>
             <li class="col2">
               <label for="J_AfterServiceStatus">状态：</label>
-              <input type="radio" /> 全部 <input type="radio" /> 询价进行中 <input type="radio" /> 已收到的报价
-            </li>
+              <input type="radio" />
+              全部
+              <input type="radio" />
+              询价进行中
+              <input type="radio" />
+              已收到的报价 </li>
           </ul>
         </form>
+      </div>
+      <div class="plr20 table-list">
+      <table width="100%" border="0" cellspacing="1" cellpadding="0">
+        <tr>
+          <th align="left" scope="col">产品型号</th>
+          <th align="left" scope="col">产品类型</th>
+          <th scope="col">数量</th>
+          <th scope="col">期望单价</th>
+          <th scope="col">期望交期</th>
+          <th scope="col">状态</th>
+          <th scope="col">操作</th>
+        </tr>
+        <tr>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="grey-btn">取消询价单</a></td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="grey-btn">取消询价单</a></td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+          </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td>2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="green">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="red-btn">查看报价单</a></td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td>2013-02-12</td>
+          </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td>2013-02-12</td>
+          </tr>
+      </table>
       </div>
     </div>
   </div>
