--- a/myorder.html
+++ b/myorder.html
@@ -60,37 +60,43 @@
   <div class="w744 fr">
     <div class="pc-con-tit"><b>我的询价单</b></div>
     <ul class="clearfix tabs">
-      <li><a href="#">我要询价</a></li>
-      <li class="curr"><a href="#">询价纪录</a></li>
+      <li class="curr"><a href="#">我要询价</a></li>
+      <li><a href="#">询价纪录</a></li>
     </ul>
     <div class="red-border">
       <div class="searbar p20">
-        <form class="form-style clearfix bought-search  bought-search-more" action="" method="post" id="J_QueryConditionForm">
-          <!--bought-search-more -->
-          <input id="submitNameId" type="hidden" name="event_submit_do_query" value="1">
-          <label for="J_BaobeiName">宝贝名称：</label>
-          <input type="text" size="50" class="input-text" value="" maxlength="30">
-          <button class="J_MakePoint button search-btn" type="submit">搜索</button>
-          <span id="J_SearchBoxToggle"> <a href="#" class="J_MakePoint more-filter" >更多筛选条件</a> <a href="#" class="J_MakePoint less-filter">精简筛选条件</a> </span>
-          <ul id="J_MoreControl" class="search-filter">
-            <li class="col1">
-              <label>报价日期:</label>
-              &nbsp;&nbsp;
-              从
-              <input type="text" class="input-text" value="">
-              到
-              <input type="text" class="input-text" value="">
-            </li>
-            <li class="col2">
-              <label for="J_AfterServiceStatus">状态：</label>
-              <input type="radio" />
-              全部
-              <input type="radio" />
-              询价进行中
-              <input type="radio" />
-              已收到的报价 </li>
-          </ul>
-        </form>
+        <dl class="mb10">
+          <dt>请选择你要交易的币种</dt>
+          <dd>
+            <span><input type="radio">港币</span>
+            <span><input type="radio">人民币</span>
+            <span><input type="radio">日元</span>
+            <span><input type="radio">美元</span>
+            <span><input type="radio">欧元</span>
+            <span><input type="radio">澳元</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt>请选择交货方式</dt>
+          <dd>
+            <span><input type="radio">HK</span>
+            <span><input type="radio">人民币</span>
+            <span><input type="radio">日元</span>
+            <span><input type="radio">美元</span>
+          </dd>
+          <dd>
+            <span><input type="radio">HK</span>
+            <span><input type="radio">人民币</span>
+            <span><input type="radio">日元</span>
+            <span><input type="radio">美元</span>
+          </dd>
+          <dd>
+            <span><input type="radio">HK</span>
+            <span><input type="radio">人民币</span>
+            <span><input type="radio">日元</span>
+            <span><input type="radio">美元</span>
+          </dd>
+        </dl>
       </div>
       <div class="plr20 table-list">
       <table width="100%" border="0" cellspacing="1" cellpadding="0">
@@ -98,106 +104,41 @@
           <th align="left" scope="col">产品型号</th>
           <th align="left" scope="col">产品类型</th>
           <th scope="col">数量</th>
-          <th scope="col">单位</th>
-          <th scope="col">单价</th>
-          <th scope="col">交货期</th>
-          <th scope="col">有效期至</th>
-          <th scope="col">状态/操作</th>
-          </tr>
-        <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+          <th scope="col">期望单价</th>
+          <th scope="col">期望交期</th>
+          <th scope="col">操作</th>
         </tr>
         <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          <td rowspan="3" align="center"><div><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></div>
-            <a href="#" class="grey-btn">取消询价单</a></td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
+          <td><input type="text" class="input-text-230"/></td>
+          <td><input type="text" class="input-text-150"/></td>
+          <td align="center"><input type="text" class="input-text-50"/></td>
+          <td align="center"><input type="text" class="input-text-70"/></td>
+          <td align="center"><input type="text" class="input-text-100"/></td>
+          <td align="center"><a href="#" class="del-btn">删除</a></td>
         </tr>
         <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
+          <td><input type="text" class="input-text-230"/></td>
+          <td><input type="text" class="input-text-150"/></td>
+          <td align="center"><input type="text" class="input-text-50"/></td>
+          <td align="center"><input type="text" class="input-text-70"/></td>
+          <td align="center"><input type="text" class="input-text-100"/></td>
+          <td align="center"><a href="#" class="del-btn">删除</a></td>
         </tr>
         <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
-        </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          <td rowspan="3" align="center"><div><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></div><a href="#" class="grey-btn">取消询价单</a></td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          </tr>
-        <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
+          <td><a href="javascript:;" class="red-btn">继续添加</a></td>
+          <td><input type="text" class="input-text-50"/> 
+            个询价产品</td>
           <td align="center">&nbsp;</td>
-          <td rowspan="3" align="center"><div><strong class="green">询价进行中</strong><a href="#">询价单详情</a></div><a href="#" class="red-btn">查看报价单</a></td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
           <td align="center">&nbsp;</td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
           <td align="center">&nbsp;</td>
-          </tr>
+          <td align="center">&nbsp;</td>
+        </tr>
+        <tr>
+          <td colspan="6" class="myorder-btn">
+            <input type="submit" value="提交" class="sub">
+            <input type="reset" value="重置" class="res">
+          </td>
+        </tr>
       </table>
       </div>
     </div>
