--- a/myorderlist.html
+++ b/myorderlist.html
@@ -98,105 +98,88 @@
           <th align="left" scope="col">产品型号</th>
           <th align="left" scope="col">产品类型</th>
           <th scope="col">数量</th>
-          <th scope="col">单位</th>
-          <th scope="col">单价</th>
-          <th scope="col">交货期</th>
-          <th scope="col">有效期至</th>
-          <th scope="col">状态/操作</th>
-          </tr>
+          <th scope="col">期望单价</th>
+          <th scope="col">期望交期</th>
+          <th scope="col">状态</th>
+          <th scope="col">操作</th>
+        </tr>
         <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
         </tr>
         <tr>
           <td>AD6033ESA</td>
           <td>音频电路</td>
           <td align="center">2000</td>
-          <td align="center">片</td>
           <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          <td rowspan="3" align="center"><div><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></div>
-            <a href="#" class="grey-btn">取消询价单</a></td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
+          <td align="center">2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="grey-btn">取消询价单</a></td>
         </tr>
         <tr>
           <td>AD6033ESA</td>
           <td>音频电路</td>
           <td align="center">2000</td>
-          <td align="center">片</td>
           <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-        </tr>
-        <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+          <td align="center">2013-02-12</td>
         </tr>
         <tr>
           <td>AD6033ESA</td>
           <td>音频电路</td>
           <td align="center">2000</td>
-          <td align="center">片</td>
           <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          <td rowspan="3" align="center"><div><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></div><a href="#" class="grey-btn">取消询价单</a></td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="yellow">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="grey-btn">取消询价单</a></td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td align="center">2013-02-12</td>
+        </tr>
+        <tr>
+          <td colspan="7">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
           </tr>
         <tr>
           <td>AD6033ESA</td>
           <td>音频电路</td>
           <td align="center">2000</td>
-          <td align="center">片</td>
           <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
+          <td>2013-02-12</td>
+          <td rowspan="3" align="center"><strong class="green">询价进行中</strong><a href="#">询价单详情</a></td>
+          <td rowspan="3" align="center"><a href="#" class="red-btn">查看报价单</a></td>
+        </tr>
+        <tr>
+          <td>AD6033ESA</td>
+          <td>音频电路</td>
+          <td align="center">2000</td>
+          <td align="center">3.2</td>
+          <td>2013-02-12</td>
           </tr>
         <tr>
           <td>AD6033ESA</td>
           <td>音频电路</td>
           <td align="center">2000</td>
-          <td align="center">片</td>
           <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">2013-10-12</td>
-          </tr>
-        <tr>
-          <td colspan="8">询价单号：3000090900 询价时间：2013-02-12 22:37:57 币种：港币 交货方式：CIF 珠海九州港</td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">&nbsp;</td>
-          <td rowspan="3" align="center"><div><strong class="green">询价进行中</strong><a href="#">询价单详情</a></div><a href="#" class="red-btn">查看报价单</a></td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">&nbsp;</td>
-          </tr>
-        <tr>
-          <td>AD6033ESA</td>
-          <td>音频电路</td>
-          <td align="center">2000</td>
-          <td align="center">片</td>
-          <td align="center">3.2</td>
-          <td align="center">7天</td>
-          <td align="center">&nbsp;</td>
+          <td>2013-02-12</td>
           </tr>
       </table>
       </div>
