--- a/myInquiryDetail.html
+++ b/myInquiryDetail.html
@@ -50,7 +50,7 @@
   <div class="w190 fl">
     <div class="m grey-border">
       <h5 class="mt">交易管理</h5>
-      <div class="mc"> <a href="#">我的询价单</a> <a href="#">我的报价单</a> <a href="#" class="curr">订单中心</a> </div>
+      <div class="mc"> <a href="#" class="curr">我的询价单</a> <a href="#">我的报价单</a> <a href="#">订单中心</a> </div>
       <h5 class="mt">服务中心</h5>
       <div class="mc"> <a href="#">在线咨询</a> </div>
       <h5 class="mt">资料管理</h5>
@@ -58,18 +58,61 @@
     </div>
   </div>
   <div class="w744 fr">
-    <div class="pc-con-tit"><b>我的订单</b></div>
+    <div class="pc-con-tit"><b>我的询价单</b></div>
     <ul class="clearfix tabs">
-      <li class="curr"><a href="#">我要订单</a></li>
+      <li><a href="#">我要询价</a></li>
+      <li><a href="#">询价纪录</a></li>
+      <li class="curr"><a href="#">询价单详情</a></li>
     </ul>
     <div class="red-border">
       <div class="searbar p20">
-          <div class="not-have mb10"><b>没有找到您的订单</b></div>
-          <div class="order"><b>我要订购，马上填写订购单</b> <a href="#" class="r-btn">我要询价</a></div>
+        <dl class="mb10">
+          <dt class="h2">询价单概况</dt>
+          <dd>询价单号：200123023</dd>
+          <dd class="plr20">
+            <div class="mt10"><strong>订单状态：</strong><span class="yellow">询价进行中</span></div>
+            <div class="mt10"><strong>币种：</strong><span>港币</span></div>
+            <div class="mt10"><strong>交货方式：</strong><span>Cif</span></div>
+            <div class="mt10"><strong>询价时间：</strong><span>2013-2-23 12:23:12</span></div>
+          </dd>
+        </dl>
       </div>
-      <div class="plr20 order-chart">
-          <h4>订购流程</h4>
-          <img src="images/myorder.gif" alt="" />
+      <div class="plr20 table-list">
+      <table width="100%" border="0" cellspacing="1" cellpadding="0">
+        <tr>
+          <th align="left" scope="col">产品型号</th>
+          <th align="left" scope="col">产品类型</th>
+          <th scope="col">数量</th>
+          <th scope="col">期望单价</th>
+          <th scope="col">期望交期</th>
+          </tr>
+        <tr>
+          <td>Ad2323</td>
+          <td>稍等哈撒</td>
+          <td align="center">2323</td>
+          <td align="center">232.123</td>
+          <td align="center">2013-2-1</td>
+          </tr>
+        <tr>
+          <td>Ad2323</td>
+          <td>稍等哈撒</td>
+          <td align="center">2321</td>
+          <td align="center">231</td>
+          <td align="center">&nbsp;</td>
+          </tr>
+        <tr>
+          <td>Ad2323</td>
+          <td>稍等哈撒</td>
+          <td align="center">23</td>
+          <td align="center">23</td>
+          <td align="center">&nbsp;</td>
+          </tr>
+        <tr>
+          <td colspan="5" class="myorder-btn">
+            <a href="#" class="grey-btn">取消询价单</a>
+            <a href="#" class="r-btn">查看报价单</a>          </td>
+          </tr>
+      </table>
       </div>
     </div>
   </div>
