--- a/MyOrderDetail.html
+++ b/MyOrderDetail.html
@@ -136,32 +136,38 @@
             <th align="left" scope="col">产品型号</th>
             <th align="left" scope="col">产品类型</th>
             <th scope="col">数量</th>
-            <th scope="col">期望单价</th>
+            <th scope="col">单价/单位</th>
+            <th scope="col">交货期</th>
             <th scope="col">期望交期</th>
+            <th scope="col">实付款</th>
           </tr>
           <tr>
             <td>Ad2323</td>
             <td>稍等哈撒</td>
             <td align="center">2323</td>
             <td align="center">232.123</td>
+            <td align="center">7天</td>
             <td align="center">2013-2-1</td>
+            <td rowspan="3" align="center"><strong>130.0</strong><br />(含快递8.00)</td>
           </tr>
           <tr>
             <td>Ad2323</td>
             <td>稍等哈撒</td>
             <td align="center">2321</td>
             <td align="center">231</td>
-            <td align="center">&nbsp;</td>
+            <td align="center">7天</td>
+            <td align="center">2013-2-1</td>
           </tr>
           <tr>
             <td>Ad2323</td>
             <td>稍等哈撒</td>
             <td align="center">23</td>
             <td align="center">23</td>
-            <td align="center">&nbsp;</td>
+            <td align="center">7天</td>
+            <td align="center">2013-2-1</td>
           </tr>
           <tr>
-            <td colspan="5" class="myorder-btn"><a href="#" class="grey-btn">取消询价单</a> <a href="#" class="r-btn">查看报价单</a></td>
+            <td colspan="7" align="right"><a href="#" class="r-btn">付款</a></td>
           </tr>
         </table>
       </div>
