--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,12 @@
 <title></title>
 <link rel="stylesheet" href="css/base.css" />
 <link rel="stylesheet" href="css/pCenter.css" />
+<style type="text/css">
+    .pc-con-tit{border-bottom: 1px solid #b20000;padding-bottom: 5px}
+    .user-help li{font-size:12px;}
+    .user-help li b{font-size:14px;font-weight: bold;color: #b20000}
+    .user-help li img{margin: 10px 0;}
+</style>
 </head>
 <body>
 <div class="header clearfix wrap">
@@ -63,62 +69,11 @@
   </div>
   <div class="w744 fr">
     <div class="pc-con-tit"><b>用户注册</b></div>
-    <ul class="clearfix tabs">
-      <li><a href="#">我要询价</a></li>
-      <li><a href="#">询价纪录</a></li>
-      <li class="curr"><a href="#">询价单详情</a></li>
-    </ul>
-    <div class="red-border">
-      <div class="searbar p20">
-        <dl class="mb10">
-          <dt class="h2">询价单概况</dt>
-          <dd>询价单号：200123023</dd>
-          <dd class="plr20">
-            <div class="mt10"><strong>订单状态：</strong><span class="yellow">询价进行中</span></div>
-            <div class="mt10"><strong>币种：</strong><span>港币</span></div>
-            <div class="mt10"><strong>交货方式：</strong><span>Cif</span></div>
-            <div class="mt10"><strong>询价时间：</strong><span>2013-2-23 12:23:12</span></div>
-          </dd>
-        </dl>
-      </div>
-      <div class="plr20 table-list">
-      <table width="100%" border="0" cellspacing="1" cellpadding="0">
-        <tr>
-          <th align="left" scope="col">产品型号</th>
-          <th align="left" scope="col">产品类型</th>
-          <th scope="col">数量</th>
-          <th scope="col">期望单价</th>
-          <th scope="col">期望交期</th>
-          </tr>
-        <tr>
-          <td>Ad2323</td>
-          <td>稍等哈撒</td>
-          <td align="center">2323</td>
-          <td align="center">232.123</td>
-          <td align="center">2013-2-1</td>
-          </tr>
-        <tr>
-          <td>Ad2323</td>
-          <td>稍等哈撒</td>
-          <td align="center">2321</td>
-          <td align="center">231</td>
-          <td align="center">&nbsp;</td>
-          </tr>
-        <tr>
-          <td>Ad2323</td>
-          <td>稍等哈撒</td>
-          <td align="center">23</td>
-          <td align="center">23</td>
-          <td align="center">&nbsp;</td>
-          </tr>
-        <tr>
-          <td colspan="5" class="myorder-btn">
-            <a href="#" class="grey-btn">取消询价单</a>
-            <a href="#" class="r-btn">查看报价单</a>          </td>
-          </tr>
-      </table>
-      </div>
-    </div>
+      <ol class="user-help">
+          <li>1.注册入口：您进入51DGIC网之后，点击顶部中间的“<b>注册</b>”字样；<br><img src="images/about/ab1.png" alt=""/></li>
+          <li>2.邮箱账号可用您常用的邮箱账号注册。<br><img src="images/about/ab2.png" alt=""/></li>
+          <li>3.注册成功后，输入您注册的邮箱账号和密码即可登陆。<br><img src="images/about/ab3.png" alt=""/></li>
+      </ol>
   </div>
   <!-- main end -->
   <div class="clearfix"></div>
