--- a/consulting.html
+++ b/consulting.html
@@ -62,8 +62,51 @@
     <ul class="clearfix tabs">
       <li class="curr"><a href="#">在线咨询</a></li>
     </ul>
-    <div class="red-border">
-
+    <div class="red-border p10">
+        <div class="consult-img"><img src="images/Consulting.png" alt=""/></div>
+        <h4 class="online-tit">在线咨询团</h4>
+        <ul class="online-talk">
+            <li><img class="fl" src="img/p1.png" alt=""/>
+                <dl class="fl">
+                    <dt><strong>David</strong>（销售主管）</dt>
+                    <dd>13100011111</dd>
+                    <dd>xxx@gmail.com</dd>
+                    <dd>
+                        <span class="qqkf"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2692242704&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2692242704:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></span>
+                    </dd>
+                </dl>
+            </li>
+            <li><img class="fl" src="img/p1.png" alt=""/>
+                <dl class="fl">
+                    <dt><strong>David</strong>（销售主管）</dt>
+                    <dd>13100011111</dd>
+                    <dd>xxx@gmail.com</dd>
+                    <dd>
+                        <span class="qqkf"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2692242704&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2692242704:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></span>
+                    </dd>
+                </dl>
+            </li>
+            <li><img class="fl" src="img/p1.png" alt=""/>
+                <dl class="fl">
+                    <dt><strong>David</strong>（销售主管）</dt>
+                    <dd>13100011111</dd>
+                    <dd>xxx@gmail.com</dd>
+                    <dd>
+                        <span class="qqkf"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2692242704&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2692242704:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></span>
+                    </dd>
+                </dl>
+            </li>
+            <li><img class="fl" src="img/p1.png" alt=""/>
+                <dl class="fl">
+                    <dt><strong>David</strong>（销售主管）</dt>
+                    <dd>13100011111</dd>
+                    <dd>xxx@gmail.com</dd>
+                    <dd>
+                        <span class="qqkf"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2692242704&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2692242704:42" alt="点击这里给我发消息" title="点击这里给我发消息"></a></span>
+                    </dd>
+                </dl>
+            </li>
+        </ul>
     </div>
   </div>
   <!-- main end -->
